# CoolSyn_Project

./: .gitignore  README.md
Client/Client/: CMakeLists.txt
Client/CoolSyn/: CMakeLists.txt  main.cpp
Client/build-Client-Qt_6_2_4_for_macOS-Debug/: CMakeCache.txt  qtcsettings.cmake
Client_tmp/: CMakeLists.txt  syn_window.ui
Client_tmp/include/: client.h  getsynsfunc.h  helpwords.h  inputzone.h  levdistance.h  mainpage.h  outputzone.h  similarwords.h  synwindow.h  tester.h  widget.h
Client_tmp/resourse/: resourses.qrc  style.css
Client_tmp/src/: client.cpp  getsynsfunc.cpp  helpwords.cpp  inputzone.cpp  levdistance.cpp  main.cpp  mainpage.cpp  outputzone.cpp  similarwords.cpp  synwindow.cpp  tester.cpp  widget.cpp
CoolSyn_Project/build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
CoolSyn_Project/build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
CoolSyn_Project/build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
CoolSyn_Project/build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/Client_tmp_autogen/: deps
CoolSyn_Project/build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/Client_tmp_autogen/6YEA5652QU/: moc_inputzone.cpp  moc_inputzone.cpp.d  moc_mainpage.cpp  moc_mainpage.cpp.d  moc_outputzone.cpp  moc_outputzone.cpp.d  moc_synwindow.cpp  moc_synwindow.cpp.d  moc_widget.cpp  moc_widget.cpp.d
Server/: .gitignore  CMakeLists.txt  Makefile  main_server.cpp
Server/include/: utils.h
Server/project/include/: server.h
Server/project/src/: main_server.cpp  server.cpp
Server/src/: main.cpp  main_client_tmp.cpp  main_server.cpp  utils.cpp
build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-0bfab0a949c290932af7.json  (+4 more)
build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/Client_tmp_autogen/: deps
build-Client_tmp-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/Client_tmp_autogen/6YEA5652QU/: moc_inputzone.cpp  moc_inputzone.cpp.d  moc_mainpage.cpp  moc_mainpage.cpp.d  moc_outputzone.cpp  moc_outputzone.cpp.d  moc_synwindow.cpp  moc_synwindow.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Client_tmp.app/Contents/: Info.plist
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Client_tmp.app/Contents/MacOS/: Client_tmp
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Client_tmp_autogen/: moc_predefs.h  mocs_compilation.cpp
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Client_tmp_autogen/6YEA5652QU/: moc_inputzone.cpp  moc_inputzone.cpp.d  moc_mainpage.cpp  moc_mainpage.cpp.d  moc_outputzone.cpp  moc_outputzone.cpp.d  moc_syn_window.cpp  moc_syn_window.cpp.d  moc_synwindow.cpp  moc_synwindow.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Client_tmp_autogen/EWIEGA46WW/: moc_syn_window.cpp  moc_syn_window.cpp.d
build-Client_tmp-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Client_tmp_autogen/include/: ui_syn_window.h
(+546 files in other folders)
